[gd_scene load_steps=16 format=2]

[ext_resource path="res://Fuentes/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/Menu_Comida/logo_carne.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Menu_Comida/logo_vegetales.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Menu_Comida/logo_frutas.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Menu_Comida/logo_lacteos.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Menu_Comida/logo_tuberculos.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Menu_Comida/logo_otros.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Menu_Comida/logo_condimentos.png" type="Texture" id=8]
[ext_resource path="res://Scripts/Comida.gd" type="Script" id=9]
[ext_resource path="res://Sprites/logo_back.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.396078, 0.396078, 0.396078, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 1 )

[node name="Comida" type="Node2D"]
script = ExtResource( 9 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 576.0
margin_bottom = 1024.0
color = Color( 0.972549, 0.764706, 0.368627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 86.5
margin_top = 120.0
margin_right = 489.5
margin_bottom = 160.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 403.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "COMIDA"
align = 1
uppercase = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 65.0
margin_right = 403.0
margin_bottom = 95.0
custom_constants/separation = 30

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 110.0
margin_right = 403.0
margin_bottom = 660.0
rect_min_size = Vector2( 0, 550 )
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 403.0
margin_bottom = 550.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="BotonCarnes" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 403.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "CARNES"
icon = ExtResource( 2 )

[node name="BotonVerduras" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 403.0
margin_bottom = 138.0
rect_min_size = Vector2( 0, 64 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "VERDURAS"
icon = ExtResource( 3 )

[node name="BotonFrutas" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 148.0
margin_right = 403.0
margin_bottom = 212.0
rect_min_size = Vector2( 0, 64 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "FRUTAS"
icon = ExtResource( 4 )

[node name="BotonLacteos" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 222.0
margin_right = 403.0
margin_bottom = 286.0
rect_min_size = Vector2( 0, 64 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "LACTEOS"
icon = ExtResource( 5 )

[node name="BotonTuberculos" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 296.0
margin_right = 403.0
margin_bottom = 360.0
rect_min_size = Vector2( 0, 64 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "TUBERCULOS"
icon = ExtResource( 6 )

[node name="BotonCondimientos" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 370.0
margin_right = 403.0
margin_bottom = 434.0
rect_min_size = Vector2( 0, 64 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "CONDIMENTOS"
icon = ExtResource( 8 )

[node name="BotonOtros" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 444.0
margin_right = 403.0
margin_bottom = 508.0
rect_min_size = Vector2( 0, 64 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "OTROS"
icon = ExtResource( 7 )

[node name="BotonVolver" type="Button" parent="VBoxContainer"]
margin_top = 675.0
margin_right = 403.0
margin_bottom = 739.0
rect_min_size = Vector2( 0, 64 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "VOLVER"
icon = ExtResource( 10 )
[connection signal="button_up" from="VBoxContainer/ScrollContainer/VBoxContainer/BotonCarnes" to="." method="_on_BotonCarnes_button_up"]
[connection signal="button_up" from="VBoxContainer/ScrollContainer/VBoxContainer/BotonVerduras" to="." method="_on_BotonVerduras_button_up"]
[connection signal="button_up" from="VBoxContainer/BotonVolver" to="." method="_on_BotonVolver_button_up"]
